--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -14,6 +14,5 @@ secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
 font = "sans serif"
 
-[client]
+client
 toolbarMode = "minimal"
-showFooter = false
