--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -14,5 +14,5 @@ secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
 font = "sans serif"
 
-client
-toolbarMode = "minimal"
+[client]
+showFooter = false
